# hledger-btc

./: CHANGELOG.md  Cargo.toml  Dockerfile.knots  LICENSE-MIT  README.md  config.toml.example  docker-compose.yml  wallets.toml.example
.github/workflows/: integration.yml
crates/hledger-btc/: Cargo.toml
crates/hledger-btc-cashapp/: Cargo.toml
crates/hledger-btc-cashapp/src/: cashapp.rs  lib.rs
crates/hledger-btc-coinbase/: Cargo.toml
crates/hledger-btc-coinbase/src/: coinbase.rs  lib.rs
crates/hledger-btc-core/: Cargo.toml
crates/hledger-btc-core/src/: annotate.rs  config.rs  error.rs  export.rs  import.rs  journal.rs  label.rs  lib.rs  money.rs  persist.rs  receivable.rs  receive.rs  reconcile.rs  scan.rs  source.rs  sync.rs  text.rs  trace.rs
crates/hledger-btc-core/tests/: integration.rs
crates/hledger-btc-lightning/: Cargo.toml
crates/hledger-btc-lightning/src/: lib.rs  phoenix.rs
crates/hledger-btc-phoenix/: Cargo.toml
crates/hledger-btc-phoenix/src/: lib.rs  phoenix.rs
crates/hledger-btc-river/: Cargo.toml
crates/hledger-btc-river/src/: lib.rs  river.rs
crates/hledger-btc/src/: config.rs  feeds.rs  main.rs  pipeline.rs  sources.rs
crates/hledger-btc/src/feeds/: cashapp.rs  phoenix.rs  river.rs
crates/hledger-btc/src/feeds/phoenix/: parse.rs
crates/hledger-btc/src/feeds/river/: parse.rs
docs/: adding-a-feed.md
