[workspace]
members = ["crates/hledger-btc-core", "crates/hledger-btc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Benjamin Hindman"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brh28/hledger-btc"

[workspace.dependencies]
# bitcoin
bdk_wallet = { version = "3.0", features = ["keys-bip39"] }
bdk_electrum = "0.24"
bdk_file_store = "0.22"

# cli & config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# errors
anyhow = "1"
thiserror = "2"

# secrets
keyring = "3"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bip329 = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
csv = "1"
serde_json = "1"
chrono = "0.4"
dirs = "6"
