[package]
name = "hledger-btc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk_wallet.workspace = true
bdk_electrum.workspace = true
bdk_file_store.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
bip329.workspace = true
serde_json.workspace = true
thiserror.workspace = true
keyring.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
