[package]
name = "hledger-btc-core"
description = "Core library for hledger-btc: wallet scanning, journal generation, transfer matching, BIP329 labels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
integration = []

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
tempfile = "3"

[dependencies]
bdk_wallet.workspace = true
bdk_electrum.workspace = true
bdk_file_store.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
bigdecimal.workspace = true
bip329.workspace = true
serde_json.workspace = true
thiserror.workspace = true
keyring.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
