[package]
name = "hledger-btc"
version = "0.1.0"
edition = "2024"

[features]
phoenix = ["dep:hledger-btc-phoenix"]
coinbase = ["dep:hledger-btc-coinbase"]
cashapp = ["dep:hledger-btc-cashapp"]
river = ["dep:hledger-btc-river"]

[dependencies]
hledger-btc-core = { path = "../hledger-btc-core" }
hledger-btc-phoenix = { path = "../hledger-btc-phoenix", optional = true }
hledger-btc-coinbase = { path = "../hledger-btc-coinbase", optional = true }
hledger-btc-cashapp = { path = "../hledger-btc-cashapp", optional = true }
hledger-btc-river = { path = "../hledger-btc-river", optional = true }
serde.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
